--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,12 @@
     appName: 'raquintaFunctionAppTest'
     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
     deploymentMethod: 'auto'
+- task: AzureFunctionApp@1
+  
+    deploymentMethod: 'auto'
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
-
 trigger:
 - master
 
